# satellite-overhead

./: .gitignore  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  quickstart.md  sitemap.xml
.github/workflows/: cd.yml  ci.yml  docs.yml
benchmarks/: benchmark_above_horizon.py
docs/: index.md
docs/reference/: analysis.md  config.md  ephemeris.md  filtering.md  index.md  io.md  models.md  pointing.md  sopp.md  utils.md
examples/: example.py  example_link_budget.py  example_persistence.py  example_planning.py
reference/: index.html
reference/analysis/: index.html
reference/config/: index.html
reference/ephemeris/: index.html
reference/filtering/: index.html
reference/io/: index.html
reference/models/: index.html
reference/pointing/: index.html
reference/sopp/: index.html
reference/utils/: index.html
search/: search_index.json
sopp/: healpix.py
sopp/custom_dataclasses/: antenna.py  power_array.py
sopp/custom_dataclasses/satellite/: satellite.py  transmitter.py
sopp/event_finder/event_finder_rhodesmill/: power_finder_rhodesmill.py
src/sopp/: __about__.py  cli.py  sopp.py  tardys4_generator.py  window_finder.py
src/sopp/analysis/: __init__.py  geometry.py  interference.py  link_budget.py  strategies.py  visibility.py  window_finder.py
src/sopp/builder/: configuration_builder.py
src/sopp/io/: tle.py  (+7 more)
tests/: conftest.py  test_datetime_utilities.py  test_examples.py  test_sopp.py  test_tardys4_generator.py
tests/analysis/: test_geometry.py  test_interference.py  test_link_budget.py  test_strategies.py
tests/builder/: test_configuration_builder.py
tests/config/: test_config_file_loader_default_argument.py  test_config_file_loader_json.py  test_config_file_loader_provided_argument.py  test_configuration_builder.py
tests/config_file_loader/: test_config_file_loader_default_argument.py  test_config_file_loader_provided_argument.py
tests/custom_dataclasses/: test_str.py  test_time_window_overlaps.py
tests/ephemeris/: test_skyfield_ephemeris_calculator.py  test_skyfield_integration.py
tests/event_finders/: test_above_horizon_scenarios.py  test_event_finder_reservation_start_time.py  test_interference_scenarios.py  test_satellites_within_main_beam_filter_altitude.py  test_satellites_within_main_beam_filter_unsorted_antenna_positions.py  test_skyfield_integration.py
tests/filtering/: test_filterer.py  test_filters.py  test_frequency_filter.py
tests/graph_generator/: test_graph_generator.py  test_polar_graph_generator.py
tests/io/: __init__.py  test_arrow_format.py  test_tle_fetch.py  test_tle_fetcher.py  test_trajectory_io.py
tests/models/: test_antenna.py  test_configuration.py  test_str.py  test_time_window_overlaps.py  test_trajectory_properties.py  test_trajectory_set.py
tests/path_finder/: path_finder_base_test.py  test_path_finder_rhodesmill.py
tests/path_finders/: test_observation_path_finder_skyfield.py  test_path_finder_skyfield.py
tests/pointing/: test_observation_path_finder_skyfield.py  test_pointing_calculator_skyfield.py
tests/positioning/: test_satellite_positions_with_respect_to_facility_retriever_rhodesmill.py
tests/reporting/: test_graph_generator.py  test_polar_graph_generator.py
tests/satellites_filter/: test_filterer.py  test_filters.py  test_frequency_filter.py
tests/satellites_loader/: test_satellites_loader_from_files.py
tests/satellites_selection/: test_filterer.py  test_filters.py
tests/scheduling/: definitions.py  test_sorted_by_least_number_of_satellites.py  validator_satellites_are_overhead_at_specific_times.py
tests/tardys/: test_tardys4_generator.py
tests/tle_fetcher/: test_tle_fetcher.py
tests/utils/: test_coordinates.py  test_datetime_utilities.py  test_geometry.py  test_time.py
tests/window_finder/: definitions.py  test_sorted_by_least_number_of_satellites.py
(+157 files in other folders)
