[project]
name = "sopp"
dynamic = ["version"]
dependencies = [
    "sgp4~=2.21",
    "skyfield~=1.47",
    "requests~=2.31.0",
    "python-dateutil~=2.8.2",
    "python-dotenv~=0.21.0",
]
requires-python = ">=3.8"
description = "SOPP is an open-source tool for calculating satellite interference to radio astronomy observations."
readme = "quickstart.md"
license = "AGPL-3.0-or-later"
keywords = ["satellites", "astronomy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
cli = [
    "matplotlib~=3.7.1",
]

[project.urls]
Repository = "https://github.com/NSF-Swift/satellite-overhead"
"Bug Tracker" = "https://github.com/NSF-Swift/satellite-overhead/issues"

[project.scripts]
cli = "sopp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
path = "src"
exclude = [
  "src/sopp.reporting",
]

[tool.hatch.version]
path = "src/sopp/__about__.py"

[tool.hatch.envs.default]
python = "3.11"

[tool.hatch.envs.test]
features = ["cli"]
dependencies = [
  "pytest~=7.2.0",
  "pytest-mock~=3.11.1",
]

[tool.hatch.envs.test.scripts]
run = "pytest {args:tests}"

[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.11", "3.12"]

[tool.hatch.envs.ci]
dev-mode = false

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
